Find String without duplicate character